--- a/gallery/index.html
+++ b/gallery/index.html
@@ -16,7 +16,7 @@
     .tz-gallery .thumbnail {
       padding: 0;
       margin-bottom: 30px;
-      background-color: transparent !important;
+      background-color: #fff;
       border-radius: 4px;
       border: none;
       transition: 0.15s ease-in-out;
