--- a/gallery/index.html
+++ b/gallery/index.html
@@ -15,7 +15,7 @@
     .tz-gallery .thumbnail {
       padding: 0;
       margin-bottom: 30px;
-      background-color: transparent !important;
+      background-color: rgba(0,0,0,0);
       border-radius: 4px;
       border: none;
       transition: 0.15s ease-in-out;
