--- a/gallery/index.html
+++ b/gallery/index.html
@@ -10,7 +10,7 @@
   <style>
     .tz-gallery {
       padding: 40px;
-      background-color: blue !important;
+      background-color: transparent !important;
     }
 
     .tz-gallery .thumbnail {
