--- a/gallery/index.html
+++ b/gallery/index.html
@@ -12,6 +12,9 @@
       padding: 0px;
     }
 
+    .notion-embed__container>iframe {
+background-color: transparent !important;
+}
     .tz-gallery .thumbnail {
       padding: 0;
       margin-bottom: 30px;
