--- a/socials.html
+++ b/socials.html
@@ -9,8 +9,6 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>My Socials</title>
-
-  <!-- Font Awesome -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css">
 
   <style>
@@ -22,6 +20,7 @@
 
     body {
       display: grid;
+      font-family: "Poppins", sans-serif;
       place-items: center;
     }
 
@@ -31,103 +30,62 @@
 
     }
 
-    .fill {
-      width: 50px;
-      height: 50px;
-      padding: 2%;
-      color: #fff;
-      outline: 0;
-      border: 2px solid black;
-      cursor: pointer;
-      position: relative;
-      background-color: rgba(0, 0, 0, 0);
-      margin: 5px;
-    }
-
-    .fill::after {
-      content: "";
-      width: 100%;
-      z-index: -1;
-      position: absolute;
-      height: 100%;
-      top: 5px;
-      left: 5px;
-      transition: 0.2s;
-    }
-
-    .fill:hover::after {
-      top: 0px;
-      left: 0px;
-    }
-
-
     .icon {
-      font-size: 1em;
+      /* Change the icon size here */
+      font-size: 2em;
+      /* Change the icons colours here*/
+      color: #7a7a7a
     }
 
-    .blog:hover,
-    .blog::after {
-      background-color: #ffbd2f;
+
+    .blog:hover {
+      color: #ffbd2f;
     }
 
-    .email:hover,
-    .email::after {
-      background-color: #23c8c8;
+    .email:hover {
+      color: #23c8c8;
     }
 
-    .facebook:hover,
-    .facebook::after {
-      background-color: #4267B2;
+    .facebook:hover {
+      color: #4267B2;
     }
 
-    .instagram:hover,
-    .instagram::after {
-      background: #f86ee1;
+    .instagram:hover {
+      color: rgb(241, 102, 217);
     }
 
-    .linkedin:hover,
-    .linkedin::after {
-      background-color: #0e76a8;
+    .linkedin:hover {
+      color: #0e76a8;
     }
 
-    .twitter:hover,
-    .twitter::after {
-      background-color: #26a7de;
+    .twitter:hover {
+      color: #26a7de;
     }
 
-    .reddit:hover,
-    .reddit::after {
-      background-color: #ff4500;
+    .reddit:hover {
+      color: #ff4500;
     }
 
-    .tiktok:hover,
-    .tiktok::after {
-      background-color: #ff0050;
+    .tiktok:hover {
+      color: #ff0050;
     }
 
-    .youtube:hover,
-    .youtube::after {
-      background-color: #FF0000;
+    .youtube:hover {
+      color: #FF0000;
     }
 
-    .pinterest:hover,
-    .pinterest::after {
-      background-color: #c8232c;
+    .pinterest:hover {
+      color: #c8232c;
     }
 
-    .telegram:hover,
-    .telegram::after {
-      background-color: #2AABEE;
+    .telegram:hover {
+      color: #2AABEE;
     }
 
     .social {
       position: relative;
       margin: 10px;
       cursor: pointer;
-    }
-
-    .social:hover {
-      color: #fff;
     }
   </style>
 
@@ -140,32 +98,32 @@
     <div class="wrapper">
 
       <!-- Start email Icon -->
-      <div id="email" onclick="navigate(this.id)" class="fill email">
+      <div id="email" onclick="navigate(this.id)" class="social">
         <span class="icon email"><i class="fa-solid fa-envelope"></i></span>
       </div>
       <!-- End email Icon -->
 
       <!-- Start instagram Icon -->
-      <div id="instagram" onclick="navigate(this.id)" class="fill instagram">
-        <span class="icon"><i class="fab fa-instagram"></i></span>
+      <div id="instagram" onclick="navigate(this.id)" class="social">
+        <span class="icon instagram"><i class="fab fa-instagram"></i></span>
       </div>
       <!-- End instagram Icon -->
 
-      <!-- Start twitter Icon -->
-      <div id="twitter" onclick="navigate(this.id)" class="fill twitter">
-        <span class="icon"><i class="fab fa-twitter"></i></span>
-      </div>
-      <!-- End twitter Icon -->
-
       <!-- Start tiktok Icon -->
-      <div id="tiktok" onclick="navigate(this.id)" class="fill tiktok">
-        <span class="icon"><i class="fab fa-tiktok"></i></span>
+      <div id="tiktok" onclick="navigate(this.id)" class="social">
+        <span class="icon tiktok"><i class="fab fa-tiktok"></i></span>
       </div>
       <!-- End tiktok Icon -->
 
+      <!-- Start twitter Icon -->
+      <div id="twitter" onclick="navigate(this.id)" class="social">
+        <span class="icon twitter"><i class="fab fa-twitter"></i></span>
+      </div>
+      <!-- End twitter Icon -->
+
       <!-- Start youtube Icon -->
-      <div id="youtube" onclick="navigate(this.id)" class="fill youtube">
-        <span class="icon"><i class="fab fa-youtube"></i></span>
+      <div id="youtube" onclick="navigate(this.id)" class="social">
+        <span class="icon youtube"><i class="fab fa-youtube"></i></span>
       </div>
       <!-- End youtube Icon -->
 
@@ -185,11 +143,12 @@
         else if (id === "email") {
           window.open("mailto:lightnhd@gmail.com", '_blank').focus(); //Add your email after "mailto:""
         }
+
         else if (id === "facebook") {
           window.open("https://facebook.com/", '_blank').focus(); //Add the url to your facebook page or account
         }
         else if (id === "instagram") {
-          window.open("https://www.instagram.com/n6uri/, '_blank').focus(); //Add the url to your instagram account
+          window.open("https://www.instagram.com/n6uri/", '_blank').focus(); //Add the url to your instagram account
         }
         else if (id === "linkedin") {
           window.open("https://www.linkedin.com/", '_blank').focus(); //Add the url to your pinterest account
