--- a/gallery/cover.html
+++ b/gallery/cover.html
@@ -2,6 +2,6 @@
 
 <script>
   function goToGallery(){
-    window.open("gallery.html",target="_SEJ" rel="noreferrer").focus();
+    window.open("gallery.html",target="_self" rel="noreferrer").focus();
   }
 </script>
