--- a/gallery/cover.html
+++ b/gallery/cover.html
@@ -2,6 +2,6 @@
 
 <script>
   function goToGallery(){
-    window.open("gallery.html","_top").focus();
+    window.open("gallery.html","_parent").focus();
   }
 </script>
