--- a/gallery/gallery.html
+++ b/gallery/gallery.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>CodePen - React &amp; CSS Grid Image Gallery</title>
+  <title>Nouri's Portfolio Highlights</title>
 
   <style>
     @charset "UTF-8";
@@ -254,7 +254,7 @@
       render() {
         return /*#__PURE__*/(
           React.createElement("div", { className: "gallery-container" }, /*#__PURE__*/
-            React.createElement("h1", null, "Gallery"), /*#__PURE__*/
+            /*React.createElement("h1", null, "Gallery"), /*#__PURE__*/
             React.createElement("div", { className: "gallery-grid" },
               imgUrls.map(this.renderImageContent)), /*#__PURE__*/
 
