--- a/socials.html
+++ b/socials.html
@@ -148,22 +148,22 @@
           window.open("https://facebook.com/", '_blank').focus(); //Add the url to your facebook page or account
         }
         else if (id === "instagram") {
-          window.open("https://www.instagram.com/n6uri/", '_blank').focus(); //Add the url to your instagram account
+          window.open("http://www.instagram.com/n6uri/", '_blank').focus(); //Add the url to your instagram account
         }
         else if (id === "linkedin") {
           window.open("https://www.linkedin.com/", '_blank').focus(); //Add the url to your pinterest account
         }
         else if (id === "twitter") {
-          window.open("https://twitter.com/n6uriii/", '_blank').focus(); //Add the url to your pinterest account
+          window.open("http://twitter.com/n6uriii/", '_blank').focus(); //Add the url to your pinterest account
         }
         else if (id === "reddit") {
           window.open("https://www.reddit.com/", '_blank').focus(); //Add the url to your reddit account
         }
         else if (id === "tiktok") {
-          window.open("https://www.tiktok.com/@n6urii", '_blank').focus(); //Add the url to your tiktok account
+          window.open("http://www.tiktok.com/@n6urii", '_blank').focus(); //Add the url to your tiktok account
         }
         else if (id === "youtube") {
-          window.open("https://youtube.com/@n6uri", '_blank').focus(); //Add the url to your youtube account
+          window.open("http://youtube.com/@n6uri", '_blank').focus(); //Add the url to your youtube account
         }
         else if (id === "pinterest") {
           window.open("https://www.pinterest.com/", '_blank').focus(); //Add the url to your pinterest account
