--- a/socials.html
+++ b/socials.html
@@ -148,13 +148,13 @@
           window.open("https://facebook.com/", '_blank').focus(); //Add the url to your facebook page or account
         }
         else if (id === "instagram") {
-          window.open("http://www.instagram.com/n6uri/", '_blank').focus(); //Add the url to your instagram account
+          window.open("http://www.instagram.com/n6uri", '_blank').focus(); //Add the url to your instagram account
         }
         else if (id === "linkedin") {
           window.open("https://www.linkedin.com/", '_blank').focus(); //Add the url to your pinterest account
         }
         else if (id === "twitter") {
-          window.open("http://twitter.com/n6uriii/", '_blank').focus(); //Add the url to your pinterest account
+          window.open("http://twitter.com/n6uriii", '_blank').focus(); //Add the url to your pinterest account
         }
         else if (id === "reddit") {
           window.open("https://www.reddit.com/", '_blank').focus(); //Add the url to your reddit account
